apps/demo-website/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-website
  labels:
    app: demo-website
spec:
  selector:
    matchLabels:
      app: demo-website
  template:
    metadata:
      labels:
        app: demo-website
    spec:
      containers:
      - name: demo-website
        image: ghcr.io/talhajuikar/flux-demo-website:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
