apps/demo-website/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-website
  labels:
    app: demo-website
spec:
  selector:
    app: demo-website
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  type: ClusterIP
