apps/demo-website/base/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: demo-website
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`demo.plutolab.live`)
    services:
    - name: demo-website
      port: 80
